tests/requests/valid/rfc9112_target_absolute_01.http
GET http://example.com/foo?q=1 HTTP/1.1\r\n
Host: example.com\r\n
\r\n
