tests/requests/invalid/023.http
GET /first HTTP/1.0\r\n
Content-Length: 0_1\r\n
\r\n